# geogram

./: CMakeLists-theirs.txt  CMakeLists.txt  CMakeLists.txt.rej  CMakeOptions.txt  CMakeOptions.txt.graphite  CMakeOptions.txt.sample  GeogramMain.cmake  README.txt  configure.bat  configure.sh  imgui.ini  license.txt  ntop_README.txt  out.meshb  snap.ppm  svn-commit.2.tmp  svn-commit.tmp
doc/: CMakeLists.txt  Makefile  VERSION.txt  cmake_install.cmake  devkit-full.dox  devkit-internal-light.dox  devkit-internal.dox  devkit.dox
doc/devkit/: PSM.dox  compiling.dox  examples.dox  mainpage.dox
src/lib/exploragram/: CMakeLists.txt  extract_hexdom.sh
src/lib/exploragram/basic/: common.h
src/lib/exploragram/hexdom/: FF.cpp  FF.h  FF_visu.cpp  FF_visu.h  PGP.cpp  PGP.h  PGP_export.cpp  PGP_export.h  basic.cpp  basic.h  cavity.cpp  cavity.h  extra_connectivity.cpp  extra_connectivity.h  frame.cpp  frame.h  geometry.cpp  geometry.h  hex.cpp  hex.h  hex_candidates.cpp  hex_cruncher.cpp  hex_cruncher.h  hex_dominant.cpp  hex_dominant.h  hexdom_pipeline.cpp  hexdom_pipeline.h  intersect_tools.cpp  intersect_tools.h  mesh_inspector.cpp  mesh_utils.cpp  mesh_utils.h  meshcomesh.cpp  mixed_constrained_solver.cpp  mixed_constrained_solver.h  polygon.cpp  polygon.h  preprocessing.cpp  preprocessing.h  quad_cover.cpp  (+8 more)
src/lib/exploragram/hexdom_old/: FF.cpp  FF_visu.cpp  FF_visu.h  PGP.cpp  PGP.h  cavity.cpp  cavity.h  extra_connectivity.cpp  frame.h  geometry.cpp  geometry.h  hex.cpp  hex.h  hex_candidates.cpp  hex_candidates.h  hex_cruncher.cpp  hex_cruncher.h  hex_dominant.h  hexdom_pipeline.cpp  hexdom_pipeline.h  id_map.h  intersect_tools.cpp  intersect_tools.h  mesh_inspector.cpp  mesh_inspector.h  mesh_utils.cpp  mesh_utils.h  mixed_constrained_solver.cpp  mixed_constrained_solver.h  polygon.cpp  preprocessing.h  quad_dominant.cpp  quad_dominant.h  quads_from_boundary.h  time_log.cpp  time_log.h
src/lib/exploragram/optimal_transport/: VSDM.cpp  conjugate_gradient.cpp  conjugate_gradient.h  linear_least_squares.cpp  linear_least_squares.h  optimal_transport.cpp  optimal_transport.h  optimal_transport_2d.cpp  optimal_transport_2d.h  optimal_transport_3d.cpp  optimal_transport_3d.h  optimal_transport_on_surface.cpp  optimal_transport_on_surface.h  sampling.cpp  sampling.h
src/lib/geogram/: CMakeLists.txt  Makefile  basic.h  cmake_install.cmake  geogram.pc.in  version.h
src/lib/geogram/NL/: OpenNL.psm  nl.h  nl_api.c  nl_arpack.c  nl_arpack.h  nl_blas.c  nl_blas.h  nl_cholmod.c  nl_cholmod.h  nl_cnc_gpu_cuda.c  nl_cnc_gpu_cuda.h  nl_context.c  nl_context.h  nl_cuda.c  nl_cuda.h  nl_ext.h  nl_iterative_solvers.c  nl_iterative_solvers.h  nl_matrix.c  nl_matrix.h  nl_mkl.c  nl_os.c  nl_preconditioners.c  nl_preconditioners.h  nl_private.h  nl_superlu.c  nl_superlu.h
src/lib/geogram/api/: defs.h
src/lib/geogram/basic/: algorithm.cpp  algorithm.h  assert.cpp  assert.h  atomics.h  attributes.cpp  attributes.h  b_stream.cpp  command_line.cpp  command_line.h  command_line_args.cpp  common.cpp  common.h  counted.h  disable_warnings.h  enable_warnings.h  environment.cpp  environment.h  factory.cpp  factory.h  file_system.cpp  file_system.h  geofile.cpp  geofile.h  geometry.h  geometry_nd.h  line_stream.cpp  line_stream.h  logger - theirs.h  logger.cpp  logger.h  matrix.h  memory.h  ntopimpl.cpp  numeric.cpp  numeric.h  packed_arrays.cpp  packed_arrays.h  process.cpp  process.h  (+14 more)
src/lib/geogram/bibliography/: #geogram.bib#  bibliography.cpp  bibliography.h  embedded_references.cpp  geogram.bib
src/lib/geogram/delaunay/: Delaunay.psm  LFS.cpp  LFS.h  cavity.h  cavity.h.000  cavity.h.hash_map  cavity.h.my_hash  delaunay.cpp  delaunay.cpp.new  delaunay.cpp.old  delaunay.h  delaunay.h.new  delaunay_2d.cpp  delaunay_2d.h  delaunay_3d.cpp  delaunay_3d.cpp.000  delaunay_3d.h  delaunay_3d.h.000  delaunay_nn.cpp  delaunay_tetgen.cpp  delaunay_tetgen.h  delaunay_triangle.cpp  flat_hash_map.h  myExtract  parallel_delaunay_3d.cpp  parallel_delaunay_3d.cpp.000  parallel_delaunay_3d.h  periodic.cpp  periodic.h  periodic_delaunay_3d.cpp  periodic_delaunay_3d.h  tmp.txt
src/lib/geogram/image/: image.cpp  image.h  image_library.cpp  image_library.h  image_rasterizer.cpp  image_rasterizer.h  image_serializer_pgm.cpp  image_serializer_pgm.h  image_serializer_stb.cpp  image_serializer_stb.h  image_serializer_xpm.cpp  image_serializer_xpm.h  morpho_math.cpp  morpho_math.h
src/lib/geogram/lua/: lua_io.cpp  lua_io.h  lua_wrap.h
src/lib/geogram/mesh/: index.h  mesh.cpp  mesh.cpp.000  mesh.h  mesh_AABB.cpp  mesh_AABB.cpp.debug  mesh_AABB.h  mesh_AABB.h.debug  mesh_ABF.cpp  mesh_ABF.h  mesh_LSCM.cpp  mesh_LSCM.h  mesh_baking.cpp  mesh_baking.h  mesh_compare.cpp  mesh_decimate.cpp  mesh_decimate.h  mesh_degree3_vertices.cpp  mesh_distance.cpp  mesh_fill_holes.cpp  mesh_fill_holes.h  mesh_frame_field.h  (+26 more)
src/lib/geogram_gfx/: CMakeLists.txt  Makefile  cmake_install.cmake  geogram_gfx.pc.in
src/test/: CMakeLists.txt  Makefile  cmake_install.cmake
src/test/bench_load/: Makefile  cmake_install.cmake
src/test/compute_OTM/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/test/compute_RVD/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/test/compute_delaunay/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/test/hexdom_pipeline/: CMakeLists.txt  main.cpp
src/test/test_GLUP/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/test/test_HLBFGS/: main.cpp
src/test/test_LSCM/: CMakeLists.txt  main.cpp
src/test/test_MH/: CMakeLists.txt  main.cpp
src/test/test_RVC/: CMakeLists.txt  Makefile  cmake_install.cmake
src/test/test_convex_cell/: Makefile  cmake_install.cmake  main.cpp
src/test/test_expansion_nt/: Makefile  cmake_install.cmake
src/test/test_locks/: CMakeLists.txt  Makefile  cmake_install.cmake
src/test/test_mallet/: CMakeLists.txt  main.cpp
src/test/test_nn_search/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/test/test_opennl/: CMakeLists.txt  Makefile  cmake_install.cmake  main.c
trunk/: CMakeLists.txt  configure.sh
(+312 files in other folders)
